# Minigram

./: DB Info.txt  README.md  TODO.txt
Client/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Chat.cpp  Chat.hpp  ChatModel.cpp  ChatModel.hpp  ChatNotificationManager.cpp  ChatNotificationManager.hpp  ChatSession.cpp  ChatSession.hpp  ChatSessionModel.cpp  ChatSessionModel.hpp  ChatSessionSortFilterProxyModel.cpp  ChatSessionSortFilterProxyModel.hpp  Contact.cpp  Contact.hpp  ContactModel.cpp  ContactModel.hpp  ContactSortFilterProxyModel.cpp  ContactSortFilterProxyModel.hpp  LoginPageContext.cpp  LoginPageContext.hpp  MainContext.cpp  MainContext.hpp  MainPageContext.cpp  MainPageContext.hpp  NetworkBuffer.cpp  NetworkBuffer.hpp  NetworkDefinition.hpp  QuickSortFilterProxyModel.cpp  QuickSortFilterProxyModel.hpp  RunGuard.cpp  RunGuard.hpp  Service.cpp  Service.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  (+7 more)
Client/Qmls/: ApplicationWindow.qml  ChatBubbleText.qml  ChatListView.qml  ChatNotificationWindow.qml  ContactButton.qml  ContactView.qml  CustomImageButton.qml  CustomTextField.qml  (+11 more)
DBTestModule/: CMakeLists.txt  CMakePresets.json  MongoDBClient.cpp  MongoDBClient.hpp  MongoDBPool.cpp  MongoDBPool.hpp  PostgreDBPool.cpp  main.cpp  vcpkg.json
Server/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  MessengerService.cpp  MessengerService.hpp  MongoDBClient.cpp  MongoDBPool.cpp  MongoDBPool.hpp  NetworkBuffer.cpp  NetworkBuffer.hpp  NetworkDefinition.hpp  PostgreDBPool.cpp  PostgreDBPool.hpp  TCPClient.cpp  TCPClient.hpp  Utility.hpp  main.cpp  vcpkg.json
